--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".di.App"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -16,12 +17,12 @@
         android:theme="@style/Theme.TwoGrandTask"
         tools:targetApi="31">
         <activity
-            android:name=".AlbumActivity"
+            android:name=".ui.activities.album.AlbumActivity"
             android:exported="false"
             android:label="@string/title_activity_album"
             android:theme="@style/Theme.TwoGrandTask" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activities.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TwoGrandTask">
